Integrated the frontend and the backend and implemented Google O auth
